--- a/package.json
+++ b/package.json
@@ -23,6 +23,10 @@
     "lint:fix": "turbo run lint --continue -- --fix --cache --cache-location .cache/eslintcache",
     "lint:ws": "bunx sherif@latest",
     "prepare": "husky",
+    "start:dev": "docker compose -f ./docker-compose.dev.yml up -d --build --force-recreate",
+    "start:prod": "docker compose -f ./docker-compose.prod.yml up -d --build --force-recreate",
+    "stop:dev": "docker compose -f ./docker-compose.dev.yml down",
+    "stop:prod": "docker compose -f ./docker-compose.prod.yml down",
     "typecheck": "turbo run typecheck"
   },
   "lint-staged": {
