fix(docker): correct chown format

--- a/apps/web/Dockerfile
+++ b/apps/web/Dockerfile
@@ -52,9 +52,9 @@ RUN addgroup --system --gid 1001 yukinu && \
     adduser --system --uid 1001 web
 USER web
 
-COPY --from=builder --chown=yukinu:web /build/apps/web/.next/standalone ./
-COPY --from=builder --chown=yukinu:web /build/apps/web/.next/static ./apps/web/.next/static
-COPY --from=builder --chown=yukinu:web /build/apps/web/public ./apps/web/public
+COPY --from=builder --chown=web:yukinu /build/apps/web/.next/standalone ./
+COPY --from=builder --chown=web:yukinu /build/apps/web/.next/static ./apps/web/.next/static
+COPY --from=builder --chown=web:yukinu /build/apps/web/public ./apps/web/public
 
 ENV NODE_ENV=production
 CMD ["bun", "--bun", "run", "apps/web/server.js"]
