--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
     "lint:fix": "turbo run lint --continue -- --fix --cache --cache-location .cache/eslintcache",
     "lint:ws": "bunx sherif@latest",
     "prepare": "husky",
-    "start:dev": "docker compose -f ./docker-compose.yml up -d --build --force-recreate",
-    "start:prod": "docker compose -f ./docker-compose.yml -f ./docker-compose.prod.yml up -d --build --force-recreate",
+    "start:dev": "docker compose -f ./docker-compose.yml up -d",
+    "start:prod": "docker compose -f ./docker-compose.yml -f ./docker-compose.prod.yml up -d",
     "stop:dev": "docker compose -f ./docker-compose.yml down",
     "stop:prod": "docker compose -f ./docker-compose.yml -f ./docker-compose.prod.yml down",
     "typecheck": "turbo run typecheck"
