--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -6,7 +6,7 @@ services:
       - '80:80'
       - '443:443'
     volumes:
-      - ./tools/nginx/default.conf:/etc/nginx/conf.d/default.conf
+      - ./tools/nginx/default.prod.conf:/etc/nginx/conf.d/default.conf
       - ./tools/nginx/certbot-www:/var/www/certbot
       - /etc/letsencrypt:/etc/letsencrypt
     depends_on:
