--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -37,20 +37,6 @@ services:
       db:
         condition: service_healthy
 
-  nginx:
-    image: nginx:trixie
-    restart: unless-stopped
-    ports:
-      - '80:80'
-      - '443:443'
-    volumes:
-      - ./tools/nginx/default.dev.conf:/etc/nginx/conf.d/default.conf
-      - ./tools/nginx/certbot-www:/var/www/certbot
-      - ./tools/nginx/certs:/etc/letsencrypt/live/localhost
-    depends_on:
-      - web
-      - dashboard
-
   db:
     image: postgres:18.0
     restart: unless-stopped
@@ -69,6 +55,20 @@ services:
       timeout: 5s
       retries: 5
       start_period: 5s
+
+  nginx:
+    image: nginx:trixie
+    restart: unless-stopped
+    ports:
+      - '80:80'
+      - '443:443'
+    volumes:
+      - ./tools/nginx/default.conf:/etc/nginx/conf.d/default.conf
+      - ./tools/nginx/certbot-www:/var/www/certbot
+      - ./tools/nginx/certs:/etc/letsencrypt/live/localhost
+    depends_on:
+      - web
+      - dashboard
 
 volumes:
   pg_data:
