--- a/tools/nginx/default.prod.conf
+++ b/tools/nginx/default.prod.conf
@@ -1,9 +1,9 @@
 server {
   listen 443 ssl;
-  server_name localhost;
+  server_name yukinu.tiesen.id.vn;
 
-  ssl_certificate     /etc/letsencrypt/live/localhost/fullchain.pem;
-  ssl_certificate_key /etc/letsencrypt/live/localhost/privkey.pem;
+  ssl_certificate     /etc/letsencrypt/live/yukinu.tiesen.id.vn/fullchain.pem;
+  ssl_certificate_key /etc/letsencrypt/live/yukinu.tiesen.id.vn/privkey.pem;
 
   location / {
     proxy_pass http://web:3000/;
@@ -26,7 +26,7 @@ server {
 
 server {
   listen 80;
-  server_name localhost;
+  server_name yukinu.tiesen.id.vn;
 
   location /.well-known/acme-challenge/ {
     root /var/www/certbot;
