--- a/turbo.json
+++ b/turbo.json
@@ -73,6 +73,11 @@
     "NODE_ENV",
     "SKIP_ENV_VALIDATION",
 
+    "VERCEL",
+    "VERCEL_ENV",
+    "VERCEL_URL",
+    "VERCEL_PROJECT_PRODUCTION_URL",
+
     "NEXT_PUBLIC_VERCEL_ENV",
     "NEXT_PUBLIC_VERCEL_URL",
     "NEXT_PUBLIC_VERCEL_PROJECT_PRODUCTION_URL",
