chore: update auth

--- a/turbo.json
+++ b/turbo.json
@@ -65,7 +65,8 @@
     "RESEND_TOKEN",
     "UPLOADTHING_TOKEN",
 
-    "PORT"
+    "PORT",
+    "TURBO_MFE_PORT"
   ],
   "globalPassThroughEnv": [
     "CI",
