--- a/apps/web/Dockerfile
+++ b/apps/web/Dockerfile
@@ -31,6 +31,9 @@ ENV TURBO_TOKEN=$TURBO_TOKEN
 ARG NEXT_PUBLIC_APP_NAME
 ENV NEXT_PUBLIC_APP_NAME=$NEXT_PUBLIC_APP_NAME
 
+ARG NEXT_PUBLIC_APP_URL
+ENV NEXT_PUBLIC_APP_URL=$NEXT_PUBLIC_APP_URL
+
 ARG NEXT_PUBLIC_TRPC_USE_STREAMING
 ENV NEXT_PUBLIC_TRPC_USE_STREAMING=$NEXT_PUBLIC_TRPC_USE_STREAMING
 
