--- a/turbo.json
+++ b/turbo.json
@@ -45,9 +45,11 @@
   },
   "globalEnv": [
     "NEXT_PUBLIC_APP_NAME",
+    "NEXT_PUBLIC_APP_URL",
     "NEXT_PUBLIC_TRPC_USE_STREAMING",
 
     "VITE_APP_NAME",
+    "VITE_APP_URL",
     "VITE_TRPC_USE_STREAMING",
 
     "POSTGRES_HOST",
@@ -69,22 +71,10 @@
   ],
   "globalPassThroughEnv": [
     "CI",
+    "VERCEL",
     "MODE",
     "NODE_ENV",
     "SKIP_ENV_VALIDATION",
-
-    "VERCEL",
-    "VERCEL_ENV",
-    "VERCEL_URL",
-    "VERCEL_PROJECT_PRODUCTION_URL",
-
-    "NEXT_PUBLIC_VERCEL_ENV",
-    "NEXT_PUBLIC_VERCEL_URL",
-    "NEXT_PUBLIC_VERCEL_PROJECT_PRODUCTION_URL",
-
-    "VITE_VERCEL_ENV",
-    "VITE_VERCEL_URL",
-    "VITE_VERCEL_PROJECT_PRODUCTION_URL",
 
     "NEON_PROJECT_ID",
     "DATABASE_URL",
