chore: update .env.example

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,11 @@
 # App configuration (for next.js)
 NEXT_PUBLIC_APP_NAME="Yukinu"
+NEXT_PUBLIC_APP_URL=""                # only required in production
 NEXT_PUBLIC_TRPC_USE_STREAMING="true" # Disable httpBatchStreamLink if deploying to Nginx
 
 # App configuration (for vite)
 VITE_APP_NAME="Yukinu"
+VITE_APP_URL=""                # only required in production
 VITE_TRPC_USE_STREAMING="true" # Disable httpBatchStreamLink if deploying to Nginx
 
 # Database configuration
@@ -23,3 +25,7 @@ AUTH_GOOGLE_SECRET=""
 # Third-party service API tokens
 RESEND_TOKEN=""
 UPLOADTHING_TOKEN=""
+
+# Turbo (optional for remote caching)
+TURBO_TEAM=""
+TURBO_TOKEN=""
