--- a/apps/dashboard/package.json
+++ b/apps/dashboard/package.json
@@ -14,8 +14,8 @@
   },
   "prettier": "@yukinu/prettier-config",
   "dependencies": {
-    "@react-router/node": "^7.9.5",
-    "@react-router/serve": "^7.9.5",
+    "@react-router/node": "^7.9.6",
+    "@react-router/serve": "^7.9.6",
     "@tanstack/react-query": "catalog:",
     "@trpc/client": "catalog:trpc",
     "@trpc/tanstack-react-query": "catalog:trpc",
@@ -29,11 +29,11 @@
     "nuqs": "catalog:",
     "react": "catalog:react",
     "react-dom": "catalog:react",
-    "react-router": "^7.9.5",
+    "react-router": "^7.9.6",
     "superjson": "catalog:trpc"
   },
   "devDependencies": {
-    "@react-router/dev": "^7.9.5",
+    "@react-router/dev": "^7.9.6",
     "@tailwindcss/vite": "catalog:tailwind",
     "@types/node": "catalog:",
     "@types/react": "catalog:react",
@@ -45,8 +45,11 @@
     "prettier": "catalog:",
     "tailwindcss": "catalog:tailwind",
     "typescript": "catalog:",
-    "vite": "7.2.2",
+    "vite": "npm:rolldown-vite@7.2.2",
     "vite-tsconfig-paths": "^5.1.4"
+  },
+  "overrides": {
+    "vite": "npm:rolldown-vite@7.2.2"
   },
   "peerDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "catalog:",
