--- a/apps/dashboard/package.json
+++ b/apps/dashboard/package.json
@@ -45,11 +45,8 @@
     "prettier": "catalog:",
     "tailwindcss": "catalog:tailwind",
     "typescript": "catalog:",
-    "vite": "npm:rolldown-vite@7.2.2",
+    "vite": "^7.2.2",
     "vite-tsconfig-paths": "^5.1.4"
-  },
-  "overrides": {
-    "vite": "npm:rolldown-vite@7.2.2"
   },
   "peerDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "catalog:",
