--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "start:db": "docker compose -f ./docker-compose.yml up db -d",
     "start:dev": "docker compose -f ./docker-compose.yml up -d",
     "start:prod": "docker compose -f ./docker-compose.prod.yml up -d",
+    "stop:db": "docker compose -f ./docker-compose.yml down db",
     "stop:dev": "docker compose -f ./docker-compose.yml down",
     "stop:prod": "docker compose -f ./docker-compose.prod.yml down",
     "typecheck": "turbo run typecheck"
