--- a/package.json
+++ b/package.json
@@ -8,13 +8,14 @@
   ],
   "scripts": {
     "build": "turbo run build",
-    "bump-deps": "bunx npm-check-updates --deep -u && bun install",
     "clean": "git clean -xdf node_modules out",
     "clean:workspaces": "turbo run clean",
     "db:generate": "turbo run db:generate -F @yukinu/db",
     "db:migrate": "turbo run db:migrate -F @yukinu/db",
     "db:push": "turbo run db:push -F @yukinu/db",
     "db:studio": "turbo run db:studio -F @yukinu/db",
+    "deps:bump": "bunx npm-check-updates --deep -u && bun install",
+    "deps:sort": "bunx sort-package-json **/**/package.json",
     "dev": "turbo dev --continue",
     "format": "turbo run format --continue -- --cache --cache-location .cache/prettiercache",
     "format:fix": "turbo run format --continue -- --write --cache --cache-location .cache/prettiercache",
@@ -41,23 +42,17 @@
       "git add --all"
     ]
   },
-  "prettier": "@yukinu/prettier-config",
+  "prettier": {
+    "semi": false,
+    "singleQuote": true
+  },
   "devDependencies": {
     "@changesets/changelog-github": "^0.5.1",
     "@changesets/cli": "^2.29.7",
-    "@commitlint/cli": "^20.1.0",
-    "@commitlint/config-conventional": "^20.0.0",
     "@types/bun": "^1.3.2",
-    "@yukinu/prettier-config": "workspace:*",
-    "@yukinu/tsconfig": "workspace:*",
     "husky": "^9.1.7",
     "lint-staged": "^16.2.6",
-    "prettier": "^3.6.2",
     "turbo": "^2.6.1"
-  },
-  "peerDependencies": {
-    "@ianvs/prettier-plugin-sort-imports": "^4.7.0",
-    "prettier-plugin-tailwindcss": "^0.7.1"
   },
   "packageManager": "bun@1.3.0",
   "catalog": {
