--- a/apps/dashboard/package.json
+++ b/apps/dashboard/package.json
@@ -45,8 +45,7 @@
     "prettier": "catalog:",
     "tailwindcss": "catalog:tailwind",
     "typescript": "catalog:",
-    "vite": "^7.2.2",
-    "vite-tsconfig-paths": "^5.1.4"
+    "vite": "^7.2.4"
   },
   "peerDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "catalog:",
