feat: update packages

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,78 +1,1 @@
-# dependencies
-node_modules/
-.pnp
-.pnp.js
-
-# testing
-coverage
-
-# next.js
-.next/
-
-# react router
-.react-router/
-
-# tanstack start
-.output/
-.tanstack/
-routeTree.gen.ts
-app.config.timestamp_*.js
-
-# java
-*.class
-*.jar
-*.war
-
-# java (gradle)
-.gradle/
-gradle/
-!gradle/wrapper/gradle-wrapper.jar
-!**/src/main/**/build/
-!**/src/test/**/build/
-
-# java (maven)
-target/
-.mvn/wrapper/maven-wrapper.jar
-!**/src/main/**/target/
-!**/src/test/**/target/
-
-# production
-build/
-dist/
-bin/
-out/
-
-# misc
-.cache/
-.husky/_
-tmp/
-.DS_Store
-Thumbs.db
-*.pem
-
-# debug
-logs/
-*.log*
-
-# local env files
-.env*
-!.env.example
-
-# turbo
-.turbo/
-
-# vercel
-.vercel
-
-# typescript
-*.tsbuildinfo
-next-env.d.ts
-expo-env.d.ts
-
-# ide
-.settings/
-.vscode/
-.idea/
-.project
-.classpath
-*.iml
+.gitignore
