--- a/.env.example
+++ b/.env.example
@@ -11,12 +11,13 @@ VITE_TRPC_USE_STREAMING="true" # Disable httpBatchStreamLink if deploying to Ngi
 # Database configuration
 POSTGRES_HOST="127.0.0.1"
 POSTGRES_PORT=5432
-POSTGRES_USER=""
+POSTGRES_USER="yukinu"
 POSTGRES_PASSWORD=""
-POSTGRES_DATABASE="yuki_db"
+POSTGRES_DATABASE="db"
 POSTGRES_SSL_MODE="false" # Disable SSL mode for local development
 
-# OAuth configuration
+# Auth configuration
+AUTH_SECRET="" # generate using `openssl rand -base64 32`
 AUTH_FACEBOOK_ID=""
 AUTH_FACEBOOK_SECRET=""
 AUTH_GOOGLE_ID=""
