--- a/tools/prettier/package.json
+++ b/tools/prettier/package.json
@@ -17,11 +17,9 @@
     "prettier-plugin-tailwindcss": "catalog:"
   },
   "devDependencies": {
+    "@types/node": "catalog:",
     "@yukinu/tsconfig": "workspace:*",
     "prettier": "catalog:",
     "typescript": "catalog:"
-  },
-  "peerDependencies": {
-    "@types/node": "catalog:"
   }
 }
