--- a/packages/lib/package.json
+++ b/packages/lib/package.json
@@ -1,34 +1,27 @@
 {
-  "name": "@yukinu/api",
-  "version": "0.1.10",
+  "name": "@yukinu/lib",
+  "version": "0.0.0",
   "private": true,
-  "license": "MIT",
   "type": "module",
   "exports": {
-    ".": "./dist/index.mjs",
+    "./create-env": "./dist/create-env.mjs",
+    "./create-id": "./dist/create-id.mjs",
     "./package.json": "./package.json"
   },
-  "main": "./dist/index.mjs",
-  "module": "./dist/index.mjs",
-  "types": "./dist/index.d.mts",
   "scripts": {
     "build": "tsdown",
     "clean": "git clean -xdf .cache .turbo dist node_modules",
     "format": "prettier --check . --ignore-path ../../.gitignore",
     "lint": "eslint",
     "typecheck": "tsc --noEmit",
-    "~dev": "tsdown --watch ./src"
+    "~dev": "tsdown --watch"
   },
   "prettier": "@yukinu/prettier-config",
   "dependencies": {
-    "@trpc/server": "catalog:trpc",
-    "@yukinu/auth": "workspace:*",
-    "@yukinu/db": "workspace:*",
-    "@yukinu/validators": "workspace:*",
-    "superjson": "catalog:trpc"
+    "@types/node": "catalog:",
+    "zod": "catalog:"
   },
   "devDependencies": {
-    "@types/bun": "^1.3.3",
     "@yukinu/eslint-config": "workspace:*",
     "@yukinu/prettier-config": "workspace:*",
     "@yukinu/tsconfig": "workspace:*",
