--- a/packages/lib/tsconfig.json
+++ b/packages/lib/tsconfig.json
@@ -1,10 +1,6 @@
 {
   "extends": "@yukinu/tsconfig/internal-package.json",
-  "compilerOptions": {
-    "paths": {
-      "@/*": ["./src/*"]
-    }
-  },
+  "compilerOptions": {},
   "include": ["src"],
   "exclude": ["node_modules"]
 }
