--- a/packages/validators/package.json
+++ b/packages/validators/package.json
@@ -26,9 +26,11 @@
   },
   "prettier": "@yukinu/prettier-config",
   "dependencies": {
-    "zod": "^4.1.13"
+    "@yukinu/lib": "workspace:*",
+    "zod": "catalog:"
   },
   "devDependencies": {
+    "@types/node": "catalog:",
     "@yukinu/eslint-config": "workspace:*",
     "@yukinu/prettier-config": "workspace:*",
     "@yukinu/tsconfig": "workspace:*",
@@ -36,10 +38,5 @@
     "prettier": "catalog:",
     "tsdown": "catalog:",
     "typescript": "catalog:"
-  },
-  "peerDependencies": {
-    "@ianvs/prettier-plugin-sort-imports": "catalog:",
-    "@types/node": "catalog:",
-    "prettier-plugin-tailwindcss": "catalog:"
   }
 }
