feat: added email

--- a/packages/email/package.json
+++ b/packages/email/package.json
@@ -1,8 +1,7 @@
 {
-  "name": "@yukinu/api",
-  "version": "0.1.10",
+  "name": "@yukinu/email",
+  "version": "0.0.0",
   "private": true,
-  "license": "MIT",
   "type": "module",
   "exports": {
     ".": "./dist/index.mjs",
@@ -14,27 +13,29 @@
   "scripts": {
     "build": "tsdown",
     "clean": "git clean -xdf .cache .turbo dist node_modules",
+    "email:dev": "email dev --dir ./src/templates",
+    "email:export": "email export",
     "format": "prettier --check . --ignore-path ../../.gitignore",
     "lint": "eslint",
     "typecheck": "tsc --noEmit",
-    "~dev": "tsdown --watch ./src"
+    "~dev": "tsdown --watch"
   },
   "prettier": "@yukinu/prettier-config",
   "dependencies": {
-    "@trpc/server": "catalog:trpc",
-    "@yukinu/auth": "workspace:*",
-    "@yukinu/db": "workspace:*",
-    "@yukinu/email": "workspace:*",
+    "@react-email/components": "^1.0.1",
     "@yukinu/validators": "workspace:*",
-    "superjson": "catalog:trpc"
+    "react": "catalog:react",
+    "resend": "^6.5.2"
   },
   "devDependencies": {
-    "@types/bun": "^1.3.3",
+    "@react-email/preview-server": "5.0.5",
+    "@types/react": "catalog:react",
     "@yukinu/eslint-config": "workspace:*",
     "@yukinu/prettier-config": "workspace:*",
     "@yukinu/tsconfig": "workspace:*",
     "eslint": "catalog:",
     "prettier": "catalog:",
+    "react-email": "^5.0.5",
     "tsdown": "catalog:",
     "typescript": "catalog:"
   }
