--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -60,17 +60,17 @@ jobs:
       - name: Typecheck
         run: bun typecheck
 
-  unit-test:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v5
-
-      - name: Setup
-        uses: ./tools/github/setup
-
-      - name: Copy env
-        shell: bash
-        run: cp .env.example .env
-
-      - name: Unit test
-        run: bun test
+  # unit-test:
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - uses: actions/checkout@v5
+  #
+  #     - name: Setup
+  #       uses: ./tools/github/setup
+  #
+  #     - name: Copy env
+  #       shell: bash
+  #       run: cp .env.example .env
+  #
+  #     - name: Unit test
+  #       run: bun test
