--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,9 @@
-# App configuration (for next.js)
+# Web configuration
 NEXT_PUBLIC_APP_NAME="Yukinu"
 NEXT_PUBLIC_APP_URL=""                # only required in production
 NEXT_PUBLIC_TRPC_USE_STREAMING="true" # Disable httpBatchStreamLink if deploying to Nginx
 
-# App configuration (for vite)
+# Dashboard configuration
 VITE_APP_NAME="Yukinu"
 VITE_APP_URL=""                # only required in production
 VITE_TRPC_USE_STREAMING="true" # Disable httpBatchStreamLink if deploying to Nginx
