fix(auth): hash algorithm

--- a/turbo.json
+++ b/turbo.json
@@ -59,6 +59,7 @@
     "POSTGRES_DATABASE",
     "POSTGRES_SSL_MODE",
 
+    "AUTH_SECRET",
     "AUTH_FACEBOOK_ID",
     "AUTH_FACEBOOK_SECRET",
     "AUTH_GOOGLE_ID",
