--- a/apps/dashboard/package.json
+++ b/apps/dashboard/package.json
@@ -14,8 +14,8 @@
   },
   "prettier": "@yukinu/prettier-config",
   "dependencies": {
-    "@react-router/node": "^7.9.6",
-    "@react-router/serve": "^7.9.6",
+    "@react-router/node": "^7.10.0",
+    "@react-router/serve": "^7.10.0",
     "@tanstack/react-query": "catalog:",
     "@trpc/client": "catalog:trpc",
     "@trpc/tanstack-react-query": "catalog:trpc",
@@ -30,11 +30,11 @@
     "nuqs": "catalog:",
     "react": "catalog:react",
     "react-dom": "catalog:react",
-    "react-router": "^7.9.6",
+    "react-router": "^7.10.0",
     "superjson": "catalog:trpc"
   },
   "devDependencies": {
-    "@react-router/dev": "^7.9.6",
+    "@react-router/dev": "^7.10.0",
     "@tailwindcss/vite": "catalog:tailwind",
     "@types/react": "catalog:react",
     "@types/react-dom": "catalog:react",
@@ -45,6 +45,6 @@
     "prettier": "catalog:",
     "tailwindcss": "catalog:tailwind",
     "typescript": "catalog:",
-    "vite": "^7.2.6"
+    "vite": "^8.0.0-beta.0"
   }
 }
