fix(web): Package prettier can't be external

--- a/apps/dashboard/package.json
+++ b/apps/dashboard/package.json
@@ -23,6 +23,7 @@
     "@yukinu/api": "workspace:*",
     "@yukinu/auth": "workspace:*",
     "@yukinu/db": "workspace:*",
+    "@yukinu/email": "workspace:*",
     "@yukinu/lib": "workspace:*",
     "@yukinu/ui": "workspace:*",
     "@yukinu/validators": "workspace:*",
