feat: added home page

--- a/turbo.json
+++ b/turbo.json
@@ -45,11 +45,13 @@
   },
   "globalEnv": [
     "NEXT_PUBLIC_APP_NAME",
-    "NEXT_PUBLIC_APP_URL",
+    "NEXT_PUBLIC_WEB_URL",
+    "NEXT_PUBLIC_DASHBOARD_URL",
     "NEXT_PUBLIC_TRPC_USE_STREAMING",
 
     "VITE_APP_NAME",
-    "VITE_APP_URL",
+    "VITE_WEB_URL",
+    "VITE_DASHBOARD_URL",
     "VITE_TRPC_USE_STREAMING",
 
     "POSTGRES_HOST",
