--- a/package.json
+++ b/package.json
@@ -59,17 +59,17 @@
     "husky": "^9.1.7",
     "lint-staged": "^16.2.7",
     "prettier-plugin-tailwindcss": "catalog:",
-    "turbo": "^2.6.2"
+    "turbo": "^2.6.3"
   },
   "packageManager": "bun@1.3.0",
   "catalog": {
     "@ianvs/prettier-plugin-sort-imports": "^4.7.0",
-    "@tanstack/react-query": "^5.90.11",
+    "@tanstack/react-query": "^5.90.12",
     "@types/node": "^24.10.1",
     "eslint": "^9.39.1",
     "prettier": "^3.7.4",
     "prettier-plugin-tailwindcss": "^0.7.2",
-    "tsdown": "^0.17.0-beta.6",
+    "tsdown": "^0.17.0",
     "typescript": "^5.9.3",
     "nuqs": "^2.8.2",
     "zod": "^4.1.13"
