--- a/packages/lib/package.json
+++ b/packages/lib/package.json
@@ -8,6 +8,7 @@
     "./create-id": "./dist/create-id.mjs",
     "./create-query-client": "./dist/create-query-client.mjs",
     "./rate-limit": "./dist/rate-limit.mjs",
+    "./slugify": "./dist/slugify.mjs",
     "./package.json": "./package.json"
   },
   "scripts": {
