feat: added rate limit

--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -25,6 +25,7 @@
     "@yukinu/auth": "workspace:*",
     "@yukinu/db": "workspace:*",
     "@yukinu/email": "workspace:*",
+    "@yukinu/lib": "workspace:*",
     "@yukinu/validators": "workspace:*",
     "superjson": "catalog:trpc"
   },
