--- a/packages/auth/package.json
+++ b/packages/auth/package.json
@@ -28,6 +28,7 @@
   "prettier": "@yukinu/prettier-config",
   "dependencies": {
     "@yukinu/db": "workspace:*",
+    "@yukinu/lib": "workspace:*",
     "@yukinu/validators": "workspace:*"
   },
   "devDependencies": {
