feat(web): completed search product feature

--- a/packages/validators/package.json
+++ b/packages/validators/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "type": "module",
   "exports": {
+    "./a": "./dist/a.mjs",
     "./auth": "./dist/auth.mjs",
     "./category": "./dist/category.mjs",
     "./env": "./dist/env.mjs",
