--- a/packages/email/package.json
+++ b/packages/email/package.json
@@ -24,13 +24,10 @@
   "dependencies": {
     "@react-email/components": "^1.0.1",
     "@yukinu/validators": "workspace:*",
-    "react": "catalog:react",
-    "react-dom": "catalog:react",
     "resend": "^6.6.0"
   },
   "devDependencies": {
     "@react-email/preview-server": "5.0.8",
-    "@types/react": "catalog:react",
     "@yukinu/eslint-config": "workspace:*",
     "@yukinu/prettier-config": "workspace:*",
     "@yukinu/tsconfig": "workspace:*",
@@ -39,5 +36,9 @@
     "react-email": "^5.0.8",
     "tsdown": "catalog:",
     "typescript": "catalog:"
+  },
+  "peerDependencies": {
+    "@types/react": "catalog:react",
+    "react": "catalog:react"
   }
 }
