--- a/package.json
+++ b/package.json
@@ -40,6 +40,16 @@
     "stop:prod": "docker compose -f ./docker-compose.prod.yml down",
     "typecheck": "turbo run typecheck"
   },
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx,json,css,md}": [
+      "npx oxfmt@0.18.0 --write",
+      "git add --all"
+    ],
+    "*.{js,mjs,cjs,jsx,ts,mts,cts,tsx}": [
+      "bun run lint:fix",
+      "git add --all"
+    ]
+  },
   "devDependencies": {
     "@changesets/changelog-github": "^0.5.2",
     "@changesets/cli": "^2.29.8",
@@ -48,12 +58,6 @@
     "oxfmt": "^0.20.0",
     "oxlint": "^1.35.0",
     "turbo": "^2.7.2"
-  },
-  "lint-staged": {
-    "*.{js,mjs,cjs,jsx,ts,mts,cts,tsx}": [
-      "bun run lint:fix",
-      "git add --all"
-    ]
   },
   "packageManager": "bun@1.3.0",
   "catalogs": {
