--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "react": {
       "@types/react": "^19.2.7",
       "@types/react-dom": "^19.2.3",
+      "next": "^16.1.1",
       "react": "^19.2.3",
       "react-dom": "^19.2.3"
     },
