chore: update .env.example

--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,14 @@
 # Web configuration
 NEXT_PUBLIC_APP_NAME="Yukinu"
-NEXT_PUBLIC_APP_URL=""                # only required in production
-NEXT_PUBLIC_TRPC_USE_STREAMING="true" # Disable httpBatchStreamLink if deploying to Nginx
+NEXT_PUBLIC_WEB_URL=""                # only required in production
+NEXT_PUBLIC_DASHBOARD_URL=""          # only required in production
+NEXT_PUBLIC_TRPC_USE_STREAMING="true" # disable httpBatchStreamLink if deploying to Nginx
 
 # Dashboard configuration
 VITE_APP_NAME="Yukinu"
-VITE_APP_URL=""                # only required in production
-VITE_TRPC_USE_STREAMING="true" # Disable httpBatchStreamLink if deploying to Nginx
+VITE_WEB_URL=""                # only required in production
+VITE_DASHBOARD_URL=""          # only required in production
+VITE_TRPC_USE_STREAMING="true" # disable httpBatchStreamLink if deploying to Nginx
 
 # Database configuration
 POSTGRES_HOST="127.0.0.1"
@@ -14,7 +16,7 @@ POSTGRES_PORT=5432
 POSTGRES_USER="yukinu"
 POSTGRES_PASSWORD=""
 POSTGRES_DATABASE="db"
-POSTGRES_SSL_MODE="false" # Disable SSL mode for local development
+POSTGRES_SSL_MODE="false" # disable SSL mode for local development
 
 # Auth configuration
 AUTH_SECRET="" # generate using `openssl rand -base64 32`
