--- a/packages/uploadthing/package.json
+++ b/packages/uploadthing/package.json
@@ -1,6 +1,8 @@
 {
   "name": "@yukinu/uploadthing",
   "version": "0.0.0",
+  "private": true,
+  "type": "module",
   "main": "./dist/index.mjs",
   "module": "./dist/index.mjs",
   "types": "./dist/index.d.mts",
