--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -21,8 +21,7 @@
     "lucide-react-native": "^0.562.0",
     "react": "19.1.0",
     "react-native": "0.81.5",
-    "react-native-safe-area-context": "^5.6.2",
-    "react-native-screens": "~4.16.0"
+    "react-native-safe-area-context": "^5.6.2"
   },
   "devDependencies": {
     "@types/react": "catalog:react",
