--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -14,14 +14,22 @@
     "@react-navigation/material-top-tabs": "^7.4.11",
     "@react-navigation/native": "^7.1.26",
     "@react-navigation/native-stack": "^7.9.0",
+    "@tanstack/react-query": "catalog:prod",
+    "@trpc/client": "catalog:trpc",
+    "@trpc/tanstack-react-query": "catalog:trpc",
+    "@yukinu/api": "workspace:*",
+    "@yukinu/lib": "workspace:*",
     "@yukinu/ui": "workspace:*",
+    "@yukinu/validators": "workspace:*",
     "expo": "~54.0.30",
     "expo-constants": "^18.0.12",
+    "expo-secure-store": "^15.0.8",
     "expo-splash-screen": "^31.0.13",
     "lucide-react-native": "^0.562.0",
     "react": "19.1.0",
     "react-native": "0.81.5",
-    "react-native-safe-area-context": "^5.6.2"
+    "react-native-safe-area-context": "^5.6.2",
+    "superjson": "catalog:trpc"
   },
   "devDependencies": {
     "@types/react": "catalog:react",
