--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
     "prod": {
       "@tanstack/react-query": "^5.90.16",
       "nuqs": "^2.8.6",
-      "zod": "^4.3.4"
+      "zod": "4.2.1"
     },
     "dev": {
       "@types/node": "^25.0.3",
