--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -27,6 +27,7 @@
     "expo-constants": "^18.0.12",
     "expo-secure-store": "^15.0.8",
     "expo-splash-screen": "^31.0.13",
+    "expo-system-ui": "^6.0.9",
     "lucide-react-native": "^0.562.0",
     "react": "19.1.0",
     "react-native": "0.81.5",
