feat(web): update home page

--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -24,6 +24,7 @@
     "@yukinu/db": "workspace:*",
     "@yukinu/email": "workspace:*",
     "@yukinu/lib": "workspace:*",
+    "@yukinu/uploadthing": "workspace:*",
     "@yukinu/validators": "workspace:*",
     "superjson": "catalog:trpc"
   },
