--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -25,6 +25,7 @@
     "@yukinu/validators": "workspace:*",
     "expo": "~54.0.30",
     "expo-constants": "^18.0.12",
+    "expo-font": "^14.0.10",
     "expo-secure-store": "^15.0.8",
     "expo-splash-screen": "^31.0.13",
     "expo-system-ui": "^6.0.9",
