--- a/.oxfmtrc.json
+++ b/.oxfmtrc.json
@@ -1,6 +1,6 @@
 {
   "$schema": "./node_modules/oxfmt/configuration_schema.json",
-  "ignorePatterns": ["apps/mobile/src/uniwind-types.d.ts"],
+  "ignorePatterns": ["**/*.{css,json,md,webmanifest,yaml,yml}"],
 
   "semi": false,
   "tabWidth": 2,
