--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -19,13 +19,17 @@
     "@tanstack/react-query": "catalog:prod",
     "@trpc/client": "catalog:trpc",
     "@trpc/tanstack-react-query": "catalog:trpc",
+    "@uploadthing/expo": "catalog:uploadthing",
     "@yukinu/api": "workspace:*",
     "@yukinu/lib": "workspace:*",
     "@yukinu/ui": "workspace:*",
+    "@yukinu/uploadthing": "workspace:*",
     "@yukinu/validators": "workspace:*",
     "expo": "~54.0.30",
     "expo-constants": "^18.0.12",
     "expo-font": "~14.0.10",
+    "expo-image-picker": "^17.0.10",
+    "expo-linking": "~8.0.11",
     "expo-secure-store": "^15.0.8",
     "expo-splash-screen": "^31.0.13",
     "expo-system-ui": "^6.0.9",
