--- a/package.json
+++ b/package.json
@@ -42,9 +42,9 @@
   "devDependencies": {
     "@changesets/changelog-github": "^0.5.2",
     "@changesets/cli": "^2.29.8",
-    "oxfmt": "^0.21.0",
-    "oxlint": "^1.36.0",
-    "turbo": "^2.7.2"
+    "oxfmt": "^0.23.0",
+    "oxlint": "^1.38.0",
+    "turbo": "^2.7.3"
   },
   "packageManager": "bun@1.3.0",
   "catalogs": {
@@ -56,7 +56,7 @@
     "dev": {
       "@types/node": "^25.0.3",
       "dotenv-cli": "^11.0.0",
-      "tsdown": "^0.19.0-beta.2",
+      "tsdown": "^0.19.0-beta.3",
       "typescript": "^5.9.3"
     },
     "react": {
@@ -71,6 +71,11 @@
       "@tailwindcss/vite": "^4.1.18",
       "tailwindcss": "^4.1.18",
       "uniwind": "^1.2.2"
+    },
+    "uploadthing": {
+      "@uploadthing/expo": "^7.2.6",
+      "@uploadthing/react": "^7.3.3",
+      "uploadthing": "^7.7.4"
     },
     "trpc": {
       "@trpc/server": "^11.8.1",
