--- a/packages/uploadthing/package.json
+++ b/packages/uploadthing/package.json
@@ -7,7 +7,6 @@
   "exports": {
     ".": "./dist/index.mjs",
     "./config": "./dist/config.mjs",
-    "./react": "./dist/react.mjs",
     "./package.json": "./package.json"
   },
   "scripts": {
@@ -17,10 +16,9 @@
     "~dev": "tsdown --watch ./src"
   },
   "dependencies": {
-    "@uploadthing/react": "^7.3.3",
     "@yukinu/auth": "workspace:*",
     "@yukinu/validators": "workspace:*",
-    "uploadthing": "^7.7.4"
+    "uploadthing": "catalog:uploadthing"
   },
   "devDependencies": {
     "@yukinu/tsconfig": "workspace:*",
