--- a/apps/dashboard/package.json
+++ b/apps/dashboard/package.json
@@ -41,6 +41,6 @@
     "@yukinu/tsconfig": "workspace:*",
     "tailwindcss": "catalog:tailwind",
     "typescript": "catalog:dev",
-    "vite": "^8.0.0-beta.5"
+    "vite": "^7.3.0"
   }
 }
