--- a/apps/dashboard/package.json
+++ b/apps/dashboard/package.json
@@ -41,6 +41,9 @@
     "@yukinu/tsconfig": "workspace:*",
     "tailwindcss": "catalog:tailwind",
     "typescript": "catalog:dev",
-    "vite": "^7.3.0"
+    "vite": "npm:rolldown-vite@^7.3.0"
+  },
+  "overrides": {
+    "vite": "npm:rolldown-vite@^7.3.0"
   }
 }
