--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "db:generate": "turbo run db:generate -F @yukinu/db",
     "db:migrate": "turbo run db:migrate -F @yukinu/db",
     "db:push": "turbo run db:push -F @yukinu/db",
+    "db:start": "docker compose -f ./docker-compose.yml up db -d",
+    "db:stop": "docker compose -f ./docker-compose.yml down db",
     "db:studio": "turbo run db:studio -F @yukinu/db",
     "deps:bump": "bunx npm-check-updates --deep -u && bun install",
     "deps:sort": "bunx sort-package-json **/**/package.json",
@@ -31,10 +33,8 @@
     "lint": "oxlint",
     "lint:fix": "oxlint --fix",
     "lint:ws": "bunx sherif@latest",
-    "start:db": "docker compose -f ./docker-compose.yml up db -d",
     "start:dev": "docker compose -f ./docker-compose.yml up -d",
     "start:prod": "docker compose -f ./docker-compose.prod.yml up -d",
-    "stop:db": "docker compose -f ./docker-compose.yml down db",
     "stop:dev": "docker compose -f ./docker-compose.yml down",
     "stop:prod": "docker compose -f ./docker-compose.prod.yml down",
     "typecheck": "turbo run typecheck"
