--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,16 +1,32 @@
 remote_theme: mikearnaldi/just-the-docs
 color_scheme: dark
 
-search_enabled: true
-nav_enabled: true
-
 title: Yukinu
 favicon_ico: '/apps/web/public/favicon.ico'
+
+search_enabled: true
+
 aux_links:
   'GitHub':
     - '//github.com/tiesen243/yukinu'
+  'Portfolio':
+    - '//tiesen.id.vn'
+aux_links_new_tab: true
 
+nav_enabled: true
 nav_sort: case_insensitive
+
+heading_anchors: true
+
+last_edit_timestamp: true
+last_edit_time_format: '%b %e %Y at %I:%M %p'
+
+gh_edit_link: true
+gh_edit_link_text: 'Edit this page on GitHub.'
+gh_edit_repository: 'https://github.com/tiesen243/yukinu'
+gh_edit_branch: 'main'
 
 mermaid:
   version: '9.1.3'
+
+enable_copy_code_button: true
