--- a/apps/dashboard/package.json
+++ b/apps/dashboard/package.json
@@ -43,6 +43,9 @@
     "typescript": "catalog:dev",
     "vite": "npm:rolldown-vite@^7.3.1"
   },
+  "peerDependencies": {
+    "uploadthing": "catalog:uploadthing"
+  },
   "overrides": {
     "vite": "npm:rolldown-vite@^7.3.0"
   }
