--- a/packages/uploadthing/package.json
+++ b/packages/uploadthing/package.json
@@ -7,6 +7,7 @@
   "exports": {
     ".": "./dist/index.mjs",
     "./config": "./dist/config.mjs",
+    "./types": "./dist/types.mjs",
     "./package.json": "./package.json"
   },
   "scripts": {
